adapters/mqtt-vertx/src/main/fabric8/hono-adapter-mqtt-vertx-dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  selector:
    name: ${project.artifactId}
  template:
    metadata:
      labels:
        app: hono
        name: ${project.artifactId}
    spec:
      containers:
      - image: eclipsehono/hono-adapter-mqtt-vertx:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 1883
          protocol: TCP
