adapters/mqtt-vertx/src/main/fabric8/hono-adapter-mqtt-vertx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  ports:
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  selector:
    name: ${project.artifactId}
