adapters/mqtt-vertx/src/main/fabric8/hono-adapter-mqtt-vertx-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  to:
    kind: Service
    name: ${project.artifactId}
  port:
    targetPort: 8883
  tls:
    termination: passthrough
